# ProjectDiana

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release-tags.yml
assembler/: __main__.py  constants.py  main.py  mmc_handler.py  mod_handler.py  pack_handler.py
data/: mods.csv
packfiles/config/: AppleCore.cfg  ArtifactEffects.cfg  Artifacts.cfg  Avaritia.cfg  Avaritiaddons.cfg  Baubles.cfg  BiblioCraft.cfg  Botania.cfg  CarpentersBlocks.cfg  DefenseTech.cfg  DraconicEvolution.Balance.cfg  DraconicEvolution.cfg  ESM.cfg  EnderStorage.cfg  ExAstrisRebirth.cfg  ExNihilo.cfg  ExtraPlanets.cfg  ExtraTiC.cfg  ExtraUtilities.cfg  HardcoreMapReset.cfg  ImmersiveEngineering.cfg  InGameInfo.txt  InGameInfoXML.cfg  InvTweaks.cfg  IronChest.cfg  ItemBlacklist.cfg  ItemBlacklist.json  Lootbags_BagConfig.cfg  LunatriusCore.cfg  Magneticraft.cfg  Mekanism.cfg  MineTweaker3.cfg  MooFluids.cfg  MouseTweaks.cfg  MrTJPCore.cfg  NEIAddons.cfg  Natura-Dynamic.json  Natura.cfg  NoMobSpawningOnTrees.cfg  OpenBlocks.cfg  (+58 more)
packfiles/config/AppliedEnergistics2/: AppliedEnergistics2.cfg  CustomRecipes.cfg  Facades.cfg  VersionChecker.cfg  extracells.cfg
packfiles/config/BigReactors/: BigReactors.cfg
packfiles/config/ChanceCubes/: chancecubes.cfg
packfiles/config/CustomMainMenu/: Content.json  mainmenu.json
packfiles/config/Exoplanets/: elipse.cfg
packfiles/local/: ftblib.json
packfiles/mmc/: instance.cfg  mmc-pack.json
packfiles/modpack/: gamemodes.json
packfiles/scripts/: ScriptAE2.zs  ScriptImmersiveEngineering.zs  ScriptMinecraft.zs  ScriptTinkers.zs
(+733 files in other folders)
